.history/cqpocshelm/templates/ingress_20230502123236.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: { { .Values.Namespacename } }
  name: { { .Values.Ingressname } }
  annotations: { { - toYaml .Values.annotations| nindent 4 } }
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: { { .Values.Servicename } }
              servicePort: 80
